--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "server-dev": "nodemon server.js",
         "start": "node server.js",
         "start-client": "npm start --prefix client",
-        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "dev": "concurrently \"npm run start\" \"npm run start-client\"",
         "build": "cd client/ && npm install && npm run build"
     },
     "repository": {
