--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
         "xss-clean": "^0.1.1"
     },
     "devDependencies": {
+        "chai": "^4.3.4",
+        "chai-http": "^4.3.0",
+        "concurrently": "5.3.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
+        "expect": "^26.6.2",
+        "mocha": "^8.3.2",
         "nodemon": "^2.0.4",
-        "concurrently": "5.3.0"
+        "supertest": "^6.1.3"
     },
     "scripts": {
         "server-dev": "nodemon server.js",
         "start": "node server.js",
         "start-client": "npm start --prefix client",
         "dev": "concurrently \"npm run start\" \"npm run start-client\"",
-        "build": "cd client/ && npm install && npm run build"
+        "build": "cd client/ && npm install && npm run build",
+        "test": "mocha --exit || true"
     },
     "repository": {
         "type": "git",
